# miniproject1

./: 2012Dataset.txt  2012_Dataset.xml  2012_Dataset_Bad.xml  2012_Dataset_Bad2.xml  2013Dataset.txt  2013_Dataset.xml  2013_Dataset_Bad.xml  2014Dataset.txt  2014_Dataset.xml  CMakeLists.txt  Lexer.cpp  Lexer.h  Makefile  MiniProject1.exe.stackdump  XML_Parser.tar  data_parser  data_parser.cpp  data_parser.h  data_parser2  data_parser2.cpp  sample_data_parser  testing2.txt  testing4.txt  testing5.txt  testing6.txt  testing7.txt
